@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
hide methods

entity User {
  +id : bigint
  +nombre : string
  +email : string
  +password : string
  +remember_token : string
  +created_at : timestamp
  +updated_at : timestamp
}

entity Habito {
  +id : bigint
  +user_id : bigint
  +nombre : string
  +created_at : timestamp
  +updated_at : timestamp
}

entity Rutina {
  +id : bigint
  +user_id : bigint
  +nombre : string
  +created_at : timestamp
  +updated_at : timestamp
}

entity RutinaDia {
  +id : bigint
  +rutina_id : bigint
  +dia_semana : string
}

entity RutinaHabito {
  +id : bigint
  +rutina_id : bigint
  +habito_id : bigint
  +hora_inicio : time?
}

entity RegistroHabito {
  +id : bigint
  +habito_id : bigint
  +fecha : date
  +completado : boolean
  +observacion : text?
  +created_at : timestamp
  +updated_at : timestamp
}

entity Meta {
  +id : bigint
  +titulo : string
  +motivo : text?
  +objetivo : unsigned int
  +fecha_inicio : date
  +fecha_limite : date
  +estado : string
  +created_at : timestamp
  +updated_at : timestamp
}

entity HabitoMeta {
  +id : bigint
  +habito_id : bigint
  +meta_id : bigint
  +created_at : timestamp
  +updated_at : timestamp
}

entity Tarea {
  +id : bigint
  +user_id : bigint
  +meta_id : bigint?
  +titulo : string
  +descripcion : text?
  +fecha_vencimiento : datetime?
  +prioridad : enum
  +estado : enum
  +created_at : timestamp
  +updated_at : timestamp
}

entity ActividadHabito {
  +id : bigint
  +habito_id : bigint
  +nombre : string
  +orden : unsigned int
  +created_at : timestamp
  +updated_at : timestamp
}

User "1" -- "0..*" Habito : crea
User "1" -- "0..*" Rutina : crea
User "1" -- "0..*" Tarea : gestiona

Habito "1" -- "0..*" RegistroHabito : registra
Habito "1" -- "0..*" ActividadHabito : contiene
Rutina "1" -- "0..*" RutinaDia : programa
Meta "1" -- "0..*" Tarea : deriva

Rutina "1" -- "0..*" RutinaHabito : vincula
Habito "1" -- "0..*" RutinaHabito : participa
Habito "1" -- "0..*" HabitoMeta : aporta
Meta "1" -- "0..*" HabitoMeta : agrupa

Rutina "0..*" -- "0..*" Habito : many-to-many
Habito "0..*" -- "0..*" Meta : many-to-many
Meta "1" -- "0..1" Tarea : opcional

note right of RutinaHabito
  Tabla pivote entre Rutina y Habito
  Atributos extra:
  - hora_inicio
end note

note right of HabitoMeta
  Tabla pivote entre Habito y Meta
end note

@enduml
